# apple-music

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: apple_music.rs  application_data.rs  error.rs  lib.rs  main.rs  playlist.rs  script_controller.rs  track.rs
src/controllers/: mod.rs  music.rs  script_controller.rs
src/controllers/scripts/: application.js  current_track.js  script.js  tracks.js
src/models/: apple_music.rs  application_data.rs  artwork.rs  error.rs  mod.rs  music.rs  playlist.rs  track.rs
src/scripts/: current_track.js  script.js
