[package]
name = "apple-music"
version = "0.5.0"
edition = "2021"
description = "A Rust Library to control local Apple Music App"
license = "MIT"
keywords = ["apple", "music", "api", "interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
