[package]
name = "apple-music"
authors = ["Dylan Cattelan <dylan.cattelan@gmail.com"]
version = "0.11.4"
edition = "2021"
description = "A Rust Library to fully control local MacOS Apple Music player."
documentation = "https://docs.rs/apple-music/latest"
repository = "https://github.com/DylanCa/apple-music"
license = "MIT"
keywords = ["apple", "music", "player", "osascript"]
categories = ["api-bindings", "gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
urlencoding = "2.1.3"
